Refactor: Image in community Post, Registration Validation & New Alert feature
